--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>CarWebsite, a website about cars.</h1>
+<p>Cars are cool.</p>
 
 </body>
 </html>
