--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>CarWebsite, a website about cars.</h1>
-<p>Cars are cool.</p>
-
-</body>
-</html>
+<iframe src="http://www.staggeringbeauty.com/" style="border: 1px inset #ddd" width="498" height="598"></iframe>
